--- a/HTML 2/Level 3/Practice 003.html
+++ b/HTML 2/Level 3/Practice 003.html
@@ -32,7 +32,7 @@
     <!-- target tag is use When you Want to Open Link in New Tab -->
     <!-- Given taging Method is use to Provide link in Image (Simply click on Link & Get the Result) -->
 
-    <a href="https://www.google.com/" target="_main" alt="Google"><img src="/Level 3/Google.png" height="100"></a>
+    <a href="https://www.google.com/" target="_main" alt="Google"><img src="Google.png" height="100"></a>
     </p>
 </body>
 </html>
