--- a/HTML 2/Project 002/Education.html
+++ b/HTML 2/Project 002/Education.html
@@ -10,7 +10,7 @@
 
 <pre><h1><b><u><center>CHANDAN CHAUDHARY</center></u></h1></b>
 
-    <img src="/Project 002/Chandan 2.jpg" alt="Image" height="100" />
+    <img src="Chandan 2.jpg" alt="Image" height="100" />
 
 <b>Permanent Adress :</b> Basti, U.P., India
 <b>E-mail:</b> chandanchaudhary533@gmail.com
