--- a/HTML 2/Project 002/Home Page.html
+++ b/HTML 2/Project 002/Home Page.html
@@ -10,13 +10,13 @@
     
 <pre><big><b>Prasonal Information :- </b></big></pre>
 <hr>
-    <b>Education Qualification : </b><a href="/Project 002/Education.html" target="_main">Click here</a>
+    <b>Education Qualification : </b><a href="Education.html" target="_main">Click here</a>
 
     </pre>
     <hr>
     <p>
         <p><b>Social Links :- </b></p>
-        <a href="https://www.youtube.com/@c2explains" target="_main"><img src="/Project 002/YouTube.png" height="50"></a>
+        <a href="https://www.youtube.com/@c2explains" target="_main"><img src="YouTube.png" height="50"></a>
         <a href="https://chandanchaudhary1.blogspot.com/" target="_main"><img src="Website.jpg" height="50"></a>
         <a href="https://github.com/iamchandanchaudhary" target="_main"><img src="GitHub.png" height="50"></a>
         <a href="https://www.facebook.com/ChanduBhaii2004/" target="_main"><img src="Facebook.png" height="50"></a>
