--- a/HTML 2/Portfolio Page/Hello.html
+++ b/HTML 2/Portfolio Page/Hello.html
@@ -8,6 +8,6 @@
 <body>
     <p>Hello Chandan</p>
 
-    <a href="/portfolio Page/index2.html">Go to</a>
+    <a href="index2.html">Go to</a>
 </body>
 </html>
