--- a/HTML 2/Portfolio Page/Practice 001.html
+++ b/HTML 2/Portfolio Page/Practice 001.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Testing Page :-</h1>
-    <a href="/Portfolio Page/index2.html">Go to Next Page</a>
+    <a href="index2.html">Go to Next Page</a>
 </body>
 </html>
