--- a/HTML 2/Portfolio Page/index.html
+++ b/HTML 2/Portfolio Page/index.html
@@ -13,6 +13,6 @@
        Hello World
     </p>
 
-    <a href = "/Portfolio Page/Hello.html">Go to Next Page</a>
+    <a href = "Hello.html">Go to Next Page</a>
 </body>
 </html>
