--- a/HTML 2/Portfolio Page/index2.html
+++ b/HTML 2/Portfolio Page/index2.html
@@ -17,11 +17,11 @@
     <a href = "https://www.google.com/" >Google</a>
     <br/>
 
-    <a href = "/Portfolio Page/index.html">Go to Next Page</a>
+    <a href = "index.html">Go to Next Page</a>
     <br>
     <!-- img tag is use for insert a Image -->
     <!-- alt tag help when Image not Found -->
     <!-- height & weight tag is use to give a Perfect Resolution -->
-    <img src="/Portfolio Page/News Buzz.jpg" alt="Logo" height="100" weight="100"/>
+    <img src="News Buzz.jpg" alt="Logo" height="100" weight="100"/>
 </body>
 </html>
