--- a/HTML 2/Portfolio Page/index3.html
+++ b/HTML 2/Portfolio Page/index3.html
@@ -6,7 +6,7 @@
     <title>Document 5</title>
 </head>
 <body>
-    <!-- b tag use for Bold, i tag use for Italic & u tag use for Underline -->
+    <!-- <b> tag use for Bold, <i> tag use for Italic & <u> tag use for Underline -->
     <h1>Name : Chandan</h1>
     <p>Decision-making statements in <b>C programming</b> are used to control the flow of <i>execution</i> based 
         on certain <u>conditions</u> or <u>criteria.</u> <br> These statements help in making decisions about which code 
@@ -14,17 +14,17 @@
         based on <u>conditions.</u></p>
 
         <hr>
-        <!-- Big tag is use to make a Big TAXT & Small tag is use to make small TEXT -->
+        <!-- <Big> tag is use to make a Big TAXT & <Small> tag is use to make small TEXT -->
         <big><b><u>This tag show Big Text</u></b></big> <br>
 
-        <!-- hr tag is use to make a line b/w the different Section -->
+        <!-- <hr> tag is use to make a line b/w the different Section -->
         <hr>
         <small>This tag show Small Text</small>
 
-        <!-- br tag is use to break the Line -->
+        <!-- <br> tag is use to break the Line -->
         <br>
-        <!-- a tag is use for Insert a Link -->
-        <a href="/Portfolio Page/index2.html">Enter Link</a>
+        <!-- <a> tag is use for Insert a Link -->
+        <a href="index2.html">Enter Link</a>
 
         <br>
         <p>Oxygen is Stand for = H<sub>2</sub>O</p>
@@ -32,7 +32,7 @@
         <p>5<sup>2</sup> = 25</p>
     
         <hr> 
-        <!-- Pre tag is use on the place of Paragraph tag to Make a non-semetric Paragraph -->
+        <!-- <Pre> tag is use on the place of Paragraph tag to Make a non-semetric Paragraph -->
         <pre>Decision-making statements in               <b>C programming</b> are used to control the flow of <i>execution</i> based 
             on certain <u>conditions</u> or <u>criteria.</u>
                  These statements help in making decisions about which code 
