--- a/HTML 2/Level 4/Form.html
+++ b/HTML 2/Level 4/Form.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign in Page</title>
+    <title>Registration Form</title>
 </head>
 <body>
     <header>
-        <h1><b><center>Registration Form </center></b></h1>
+        <h1><b><center>Registration Form</center></b></h1>
     </header>
 
     <main>
-        <p><big><b>Sign in :-</b></big></p>
+        <p><big><b>Create Account :-</b></big></p>
         <hr>
         <form action="/action.php">
             
