--- a/HTML 2/Practice 001/Form Design.html
+++ b/HTML 2/Practice 001/Form Design.html
@@ -19,6 +19,8 @@
     <hr>
 
     <form> 
+
+        <!-- Text -->
         <label for="name">
             <b>Name : </b>
             <input type="text" name="name" placeholder="name">
@@ -26,10 +28,53 @@
 
         <br><br>
 
+        <!-- Passward -->
         <label for="name">
             <b>Password : </b>
             <input type="Password" name="Password" placeholder="password">
         </label>
+
+        <br>
+
+        <!-- Radio -->
+        <p><b>Select your Class :- </b></p>
+        <label for="101">
+            <input type="radio" name="Class"> Class X
+        </label>
+        <label for="102">
+            <input type="radio" name="Class"> Class XII
+        </label>
+
+        <!-- Checkbox -->
+        <p><b>Select Language :- </b></p>
+        <label for="C Language">
+            <input type="checkbox" name="C Language"> C Language
+        </label>
+
+        <label for="HTML">
+            <input type="checkbox" name="HTML"> HTML
+        </label>
+
+        <label for="C++">
+            <input type="checkbox" name="C++"> C++
+        </label>
+
+        <label for="Java">
+            <input type="checkbox" name="Java"> Java
+        </label>
+
+        <label for="Python">
+            <input type="checkbox" name="Python"> Python
+        </label>
+
+        <br><br>
+
+        <!-- Select -->
+         <b>Select City :- </b>
+         <select>
+            <option>Mumbai</option>
+         </select>
+
     </form>
 </body>
 </html>
