--- a/HTML 2/Practice 001/Form Design.html
+++ b/HTML 2/Practice 001/Form Design.html
@@ -15,7 +15,7 @@
 
     <h1>Create Account</h1>
     
-    <p>Sign in :- </p>
+    <p><b>Sign in :- </b></p>
     <hr>
 
     <form> 
@@ -70,10 +70,18 @@
         <br><br>
 
         <!-- Select -->
-         <b>Select City :- </b>
+         <b>Select City : </b>
          <select>
             <option>Mumbai</option>
+            <option>Delhi</option>
+            <option>Lucknow</option>
+            <option>Bangluru</option>
+            <option>Kanpur</option>
+            <option>Raipur</option>
          </select>
+
+         <br><br>
+         <input type="submit">
 
     </form>
 </body>
