--- a/HTML 2/Level 4/List.html
+++ b/HTML 2/Level 4/List.html
@@ -10,8 +10,8 @@
     <main>
         <p><b>Un-Orderd List :- </b></p>
 
-        <!-- ul tag is Used for Un-Orderd List -->
-        <!-- li tag is Used for main List -->
+        <!-- 'ul' tag is Used for Un-Orderd List -->
+        <!-- 'li' tag is Used for List -->
         <ul>
             <li>Apple</li>
              <ul>
@@ -32,6 +32,7 @@
 <hr>
         <p><b>Orderd List :- </b></p>
 
+        <!-- 'ol' tag is Used for Orderd List -->
         <ol>
             <li>Apple</li>
             <ul>
